Avoid overlapping lines
llvm-svn: 259476

--- a/polly/www/menu.css
+++ b/polly/www/menu.css
@@ -76,7 +76,6 @@ li.rss-item {
 }
 
 .rss_item {
-  line-height: 0.5em;
   padding-top: 1em;
 }
 
